2005-08-11 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Partially autoconfigure IP, MSS, src_allow, and interface if
	  no 'interface' in config.py or no 'src_allow' in sumiserv.cfg.

2005-08-10 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* General code cleanup (pychecker again)
	* NAK lost packets are compressed, ex: 1-5,8,10 instead of 1,2,3,..

2005-07-31 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.11
	* Auth packet includes hash of nonce for client to verify
	* Completely redone crypto implementation from 0.8.10
	* Use SHA-1 for key derivation function as recommended
	* Changed MD5 to SHA-1 in auth packet (MD5 still used for rawproxd)
	* Added INTERLOCK_DELAY; a time-sensitive enhancement to the Interlock
	  Protocol in order to detect some MITM

2005-07-23 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Request messages can now be encrypted, set "crypto" to "y"
	* EC-DH + interlock protocol for key exchange/request
	* AES-256 for symmetric encryption 
	* Protects against passive eavesdropping and active MITM (not hijack)
	* Works well, but incomplete--need to verify nonce, encrypt data

2005-07-14 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Removed cryptography for now--needs to be redone.

2005-07-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Use log() instead of print in client, server, and transports
	* sumiget logs to "Client" tab, now works
	* Removed "Networks" tab
	* Fixed most pychecker warnings on source code
	* Split larger functions into smaller functions
	* Added 'noise' option to allow simulated packet loss
	* sumigetw now runs sumiserv in "Server" tab

2005-07-02 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.10
	* sumiserv send_packet_UDP_PCAP tested and now works on Windows Me
	* WinPcap DLLs removed from distribution--install separately instead
	  (fixes missing DLL problem on Me)
	* added server_udp_PCAP to receive UDP packets using WinPcap in