@@ -1,5 +1,6 @@
 TO DO   20050802JC
 
+* Migrate from wxPythonWIN32-2.4.2.4-Py23 to wxPython 2.6, and Python 2.4
 * Look into FSP - http://cvs.sourceforge.net/viewcvs.py/fsp/fsp/INFO?view=auto
   it is slower than TCP, but can adapt very quickly to changing conditions
   see also: http://fsp.sourceforge.net/faq/index.html . its based on UDP, may
