@@ -19,8 +19,8 @@
  'irc_server': 'irc.xtc-dreams.com',
  'maxwait': 7,
  'mss': 1462,
- 'myip2': '10.0.0.106',
- 'myip': '10.0.0.64',
+ 'myip2': '10.0.0.64',
+ 'myip2': '10.0.0.101',
  'myip3': '10.0.0.64',
  'myport': 2771,
  'passwd': '11111111111111111111111111111111',
